deploy/k8s/overlays/local-kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiny-ledger-ingress
  labels:
    app.kubernetes.io/name: tiny-ledger
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: auth.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
    - host: api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tiny-ledger-service
                port:
                  number: 8080
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tiny-ledger-service
                port:
                  number: 8080
